<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Memory Keeper</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_intro_text">Click to add new item.</string>
    <string name="take_pic">Capture Photo</string>
    <string name="action_map">Map</string>
    <string name="action_calendar">Calendar</string>
    <string name="action_list">List</string>
    <string name="location">Location</string>
    <string name="reminder">Reminder</string>
    <string name="find">Find</string>
    <string name="title">Title</string>
    <string name="save_button">Save</string>
    <string name="notes">notes</string>
    <string name="search">Search</string>
    <string name="takenPic">taken Picure</string>
    <string name="LocationButton">Location Button</string>
    <string name="ReminderButton">Reminder Button</string>
    <string name="arrowImgText">arrow image</string>
    <string name="simleImgText">Evil Smile</string>
    <string name="action_grid">Photo Grid</string>

</resources>