<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<item android:id="@+id/menu_search"
          android:title="@string/search"
          android:icon="@drawable/ic_menu_search"
          android:showAsAction="ifRoom|collapseActionView"
          android:actionViewClass="android.widget.SearchView" />
    <item android:id="@+id/menu_add" 
        android:title="" 
        android:icon="@drawable/plus" 
        android:showAsAction="always" />
    
    <item
        android:id="@+id/action_map"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_map"/>
    
    <item
        android:id="@+id/action_calendar"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_calendar"/>
    
    <item
        android:id="@+id/action_list"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_list"/>
    
    <item
        android:id="@+id/action_grid"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_grid"/>
    
    

</menu>